# MCMparallels

./: .gitignore  CMakeLists.txt  README.md
include/: SimpleRoundRobinScheduler.h  Task.h  TaskManager.h  TaskQueue.h  TaskScheduler.h  concurrent_execute.h
src/: CMakeLists.txt  Task.cc  TaskManager.cc  TaskQueue.cc
